fix alignment of dropdown on resolutions > 768

--- a/src/assets/css/dukecon.less
+++ b/src/assets/css/dukecon.less
@@ -1009,7 +1009,8 @@ a .speakerinfo {
                 top: 40px;
                 right: 0;
                 &.shown {
-                    display: block;
+                  text-align: left;
+                  display: block;
                     box-shadow: 0 2px 3px 0 @boxShadowColor;
                 }
                 a {
